<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/prevMonthButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorSecondaryVariant"
            android:contentDescription="@string/fragment_calendar_1"
            android:padding="0dp"
            android:paddingStart="5dp"
            app:icon="@drawable/baseline_navigate_before_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            tools:ignore="RtlSymmetry,VisualLintButtonSize" />

        <TextView
            android:id="@+id/monthYearTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/fragment_calendar_2"
            android:textAlignment="center"
            android:textColor="?attr/android:textColor"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextMonthButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorSecondaryVariant"
            android:contentDescription="@string/fragment_calendar_3"
            android:padding="0dp"
            android:paddingStart="5dp"
            app:icon="@drawable/baseline_navigate_next_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            tools:ignore="RtlSymmetry,VisualLintButtonSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monday_short"
            android:textAlignment="center"
            android:textColor="?attr/android:textColorTertiary"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tuesday_short"
            android:textAlignment="center"
            android:textColor="?attr/android:textColorTertiary"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wednesday_short"
            android:textAlignment="center"
            android:textColor="?attr/android:textColorTertiary"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thursday_short"
            android:textAlignment="center"
            android:textColor="?attr/android:textColorTertiary"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/friday_short"
            android:textAlignment="center"
            android:textColor="?attr/android:textColorTertiary"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saturday_short"
            android:textAlignment="center"
            android:textColor="?attr/android:textColorTertiary"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sunday_short"
            android:textAlignment="center"
            android:textColor="?attr/android:textColorTertiary"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>













