<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_trip_1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDestination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="?attr/android:textColor"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDepartureDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_trip_2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDepartureDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:focusable="false"
                android:inputType="none"
                android:maxLines="1"
                android:textColor="?attr/android:textColor"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutArrivalDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_trip_3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextArrivalDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:focusable="false"
                android:inputType="none"
                android:maxLines="1"
                android:textColor="?attr/android:textColor"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_trip_4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:textColor="?attr/android:textColor"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:textColor="?attr/android:textColor"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>
</ScrollView>